--- a/HTML/index.html
+++ b/HTML/index.html
@@ -12,7 +12,7 @@
         <a href="#"><button type="button">Disponibles y retirados</button></a>
         <a href="#"><button type="button">Pares e impares</button></a> 
         <a href="#"><button type="button">Aprobados y reprobados</button></a> 
-        <a href="#"><button type="button">Eliminar y ordenar</button></a> 
+        <a href="Ejercicio4.html"><button type="button">Eliminar y ordenar</button></a> 
         <a href="#"><button type="button">Listar palabras por letra</button></a>
     </div>
 </body>
