--- a/HTML/Ejercicio4.html
+++ b/HTML/Ejercicio4.html
@@ -29,7 +29,10 @@
             <input type="text" name="Delete" id="Delete" placeholder="2">
             <button id="Eliminar" type="button">Eliminar</button>
         </div>
+        <a href="index.html"><button>Regresar</button></a>
     </div>
+
+   
 
     <script src="/JS/Ejercicio4.js"></script>
 </body>
