--- a/HTML/index.html
+++ b/HTML/index.html
@@ -9,11 +9,11 @@
 <body>
     <h1>Menú</h1>
     <div class="menu">
-        <a href="#"><button type="button">Disponibles y retirados</button></a>
+        <a href="Ejercicio1_5.html"><button type="button">Ejercicos 1 y 5</button></a>
         <a href="#"><button type="button">Pares e impares</button></a> 
         <a href="#"><button type="button">Aprobados y reprobados</button></a> 
         <a href="Ejercicio4.html"><button type="button">Eliminar y ordenar</button></a> 
-        <a href="#"><button type="button">Listar palabras por letra</button></a>
+        
     </div>
 </body>
 </html>
